version/0.8/_sources/examples/index.rst.txt
:orphan:

.. _ref_example_gallery:

========
Examples
========

..
   This toctree must be a top level index to get it to show up in
   pydata_sphinx_theme

.. toctree::
   :maxdepth: 1
   :hidden:

.. 00-postprocessing/README.txt


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

Postprocessing examples
=======================
These examples show how to use external packages to postprocess Fluent
results.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Postprocessing using PyVista and Matplotlib">

.. only:: html

  .. image:: /examples/00-postprocessing/images/thumb/sphx_glr_post_processing_exhaust_manifold_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-postprocessing_post_processing_exhaust_manifold.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Postprocessing using PyVista and Matplotlib</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/00-postprocessing/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
