version/0.20/_sources/examples/index.rst.txt
:orphan:

.. _ref_example_gallery:

========
Examples
========

..
   This toctree must be a top level index to get it to show up in
   pydata_sphinx_theme

.. toctree::
   :maxdepth: 1
   :hidden:

.. 00-postprocessing/README.txt


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Postprocessing examples
=======================
These examples show how to use external packages to postprocess Fluent
results.


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Key Improvements:">

.. only:: html

  .. image:: /examples/00-postprocessing/images/thumb/sphx_glr_updated_exhaust_manifold_example_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-postprocessing_updated_exhaust_manifold_example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Enhanced Postprocessing with PyVista and Matplotlib</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/00-postprocessing/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
